# musciproject

./: AudioBufferDevice.h  AudioPlayer.cpp  AudioPlayer.h  AudioSample.qml  ButtonItem.qml  CMakeLists.txt  DataSource.cpp  DataSource.h  EQFilterGroup.h  EQWidget.cpp  MiniLrcDialog.qml  MusicLrc.qml  MusicTitle.qml  MyMediaPlayer.qml  README.md  RecentSong.qml  Resources.qrc  SongSearch.qml  Songinformation.qml  common.h  datasource.cpp  datasource.h  icon.qrc  main.cpp  main.qml  main.qml.autosave  mylrc.cpp  mylrc.h  searchsong.cpp  searchsong.h  songdecode.cpp  songdecode.h
